--- a/self-hosted/overview.mdx
+++ b/self-hosted/overview.mdx
@@ -3,4 +3,11 @@ title: Self-Hosted
 description: "Self-hosted integration"
 ---
 
-## Overview
+<Warning>
+  Self-hosting comes with significant complexity and operational overhead. For a
+  simpler experience, we recommend using our fully-managed cloud platform at
+  [https://app.ctrlplane.dev](https://app.ctrlplane.dev)
+</Warning>
+
+Ctrlplane can be deployed in a variety of ways. The most common way is to use
+our Terraform module.
