--- a/integrations/cloud-providers/digital-ocean.mdx
+++ b/integrations/cloud-providers/digital-ocean.mdx
@@ -3,8 +3,6 @@ title: Digital Ocean
 description: "Digital Ocean integration"
 ---
 
-## Resource Provider
+## Droplet Resource Provider
 
-### Managed Provider
-
-### Unmanaged Provider
+Scans your Digital Ocean team for droplets and inserts them into Ctrlplane.
