--- a/overview.mdx
+++ b/overview.mdx
@@ -5,4 +5,39 @@ description: |
   helps you scale your infrastructure.
 ---
 
+Ctrlplane is an open-source deployment orchestration tool designed to streamline
+and manage complex deployment processes across diverse infrastructures. It
+provides a centralized platform for coordinating deployments, ensuring
+consistency, and enhancing scalability.
+
+- Integration with existing CI/CD tools
+- Advanced orchestration policies
+- Automation and synchronization of deployment activities
+- Version management
+- Environment standardization
+- Resource/CI analysis
+
 ## Use Cases
+
+<CardGroup cols={2}>
+  <Card
+    title="CI/CD Integration"
+    icon="cogs"
+    description="Seamlessly integrate with existing CI/CD tools to automate and streamline deployment processes."
+  />
+  <Card
+    title="Environment Standardization"
+    icon="globe"
+    description="Ensure consistent environments across all deployments to maintain reliability and reduce errors."
+  />
+  <Card
+    title="Advanced Orchestration"
+    icon="network-wired"
+    description="Implement complex orchestration policies to manage and coordinate deployments efficiently."
+  />
+  <Card
+    title="Resource Management"
+    icon="database"
+    description="Analyze and optimize resource usage to improve performance and scalability."
+  />
+</CardGroup>
