--- a/first-deployment.mdx
+++ b/first-deployment.mdx
@@ -1,15 +1,14 @@
 ---
 title: First Deployment
 description: |
-  This tutorial series will help you complete your first deployment in Ctrlplane.
-  We’ll walk through the steps to deploy a sample hello world script to run against
-  one or more servers.
+  Learn how to make your first deployment with Ctrlplane by following this tutorial.
+  We'll create a simple hello world deployment that can run across multiple servers.
 ---
 
-To follow this tutorial, you'll need to have:
+Before starting, ensure you have:
 
-- A Ctrlplane Workspace in our cloud or self-hosted instance.
-- Install the Ctrlplane CLI
+- Access to a Ctrlplane Workspace (cloud-hosted or self-hosted)
+- The Ctrlplane CLI installed
 
 ## Create a new System
 
