--- a/overview.mdx
+++ b/overview.mdx
@@ -17,27 +17,60 @@ consistency, and enhancing scalability.
 - Environment standardization
 - Resource/CI analysis
 
-## Use Cases
+---
+
+## Get started
+
+If you’re new to Ctrlplane, start here to learn the essentials and make your first
+deployment.
 
 <CardGroup cols={2}>
   <Card
-    title="CI/CD Integration"
-    icon="cogs"
+    title="First Deployment"
+    icon="ship"
     description="Seamlessly integrate with existing CI/CD tools to automate and streamline deployment processes."
   />
   <Card
-    title="Environment Standardization"
-    icon="globe"
-    description="Ensure consistent environments across all deployments to maintain reliability and reduce errors."
+    title="Concepts"
+    icon="books"
+    description="Learn about the core concepts of Ctrlplane."
   />
+</CardGroup>
+
+---
+
+## Extend Ctrlplane
+
+Learn about the API, CLI tooling, and integrations the community has built.
+
+<CardGroup cols={3}>
+  <Card title="Open API" icon="code" href="/api-reference">
+    Explore the API reference for Ctrlplane.
+  </Card>
+  <Card title="CLI Tooling" icon="terminal" href="/cli">
+    Explore the CLI tooling for Ctrlplane.
+  </Card>
+  <Card title="Integrations" icon="screwdriver-wrench" href="/integrations">
+    Explore the Ctrlplane integrations.
+  </Card>
+</CardGroup>
+
+---
+
+## Community
+
+Reach out to the Ctrlplane community to get help, share your ideas, and get
+involved.
+
+<CardGroup cols={2}>
+  <Card title="Discord" icon="discord" href="https://discord.ctrlplane.dev">
+    Join the Ctrlplane Discord community.
+  </Card>
   <Card
-    title="Advanced Orchestration"
-    icon="network-wired"
-    description="Implement complex orchestration policies to manage and coordinate deployments efficiently."
-  />
-  <Card
-    title="Resource Management"
-    icon="database"
-    description="Analyze and optimize resource usage to improve performance and scalability."
-  />
+    title="Github"
+    icon="github"
+    href="https://github.com/ctrlplanedev/ctrlplane"
+  >
+    Explore the Github repository for Ctrlplane.
+  </Card>
 </CardGroup>
