--- a/self-hosted/install/docker.mdx
+++ b/self-hosted/install/docker.mdx
@@ -1,3 +1,29 @@
 ---
 title: Docker
 ---
+
+<Warning>
+  We recommend using the cloud-native version of
+  [Ctrlplane](https://app.ctrlplane.dev) when possible. Current selfhosted
+  installation is not stable.
+</Warning>
+
+## Prerequisites
+
+- Docker installed on your system
+- Docker Compose installed on your system
+
+## Installation
+
+1. Clone the Ctrlplane repository:
+
+   ```bash
+   git clone https://github.com/ctrlplanedev/ctrlplane.git
+   cd ctrlplane
+   ```
+
+2. Run the deployment command:
+
+   ```bash
+   docker compose up -d
+   ```
