--- a/self-hosted/install/kubernetes.mdx
+++ b/self-hosted/install/kubernetes.mdx
@@ -2,6 +2,12 @@
 title: Kubernetes
 ---
 
+<Warning>
+  We recommend using the cloud-native version of
+  [Ctrlplane](https://app.ctrlplane.dev) when possible. Current selfhosted
+  installation is not stable.
+</Warning>
+
 To install a cloud-native version of Ctrlplane, use the Ctrlplane Helm chart.
 This chart contains all the required components to get started and can scale to
 large deployments.
