add filter image and links

--- a/overview.mdx
+++ b/overview.mdx
@@ -29,11 +29,13 @@ deployment.
     title="First Deployment"
     icon="ship"
     description="Seamlessly integrate with existing CI/CD tools to automate and streamline deployment processes."
+    href="/first-deployment"
   />
   <Card
     title="Concepts"
     icon="books"
     description="Learn about the core concepts of Ctrlplane."
+    href="/concepts/systems"
   />
 </CardGroup>
 
@@ -47,7 +49,11 @@ Learn about the API, CLI tooling, and integrations the community has built.
   <Card title="Open API" icon="code" href="/api-reference">
     Explore the API reference for Ctrlplane.
   </Card>
-  <Card title="CLI Tooling" icon="terminal" href="/cli">
+  <Card
+    title="CLI Tooling"
+    icon="terminal"
+    href="https://github.com/ctrlplanedev/cli"
+  >
     Explore the CLI tooling for Ctrlplane.
   </Card>
   <Card title="Integrations" icon="screwdriver-wrench" href="/integrations">
@@ -63,7 +69,7 @@ Reach out to the Ctrlplane community to get help, share your ideas, and get
 involved.
 
 <CardGroup cols={2}>
-  <Card title="Discord" icon="discord" href="https://discord.ctrlplane.dev">
+  <Card title="Discord" icon="discord" href="https://ctrlplane.dev/discord">
     Join the Ctrlplane Discord community.
   </Card>
   <Card
