--- a/policies/resource-filtering.mdx
+++ b/policies/resource-filtering.mdx
@@ -5,6 +5,13 @@ description: |
   deploy in an environment.
 ---
 
+<Frame>
+  <img
+    src="/policies/images/resource-filter-example.png"
+    alt="Resource Filtering"
+  />
+</Frame>
+
 ## Filter Levels
 
 Filters can be applied at two levels:
