--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,7 +7,9 @@ description: |
 
 ## What you can do with Ctrlplane
 
-Ctrlplane is designed to streamline and automate complex deployment processes across diverse infrastructures, helping teams scale their operations efficiently and securely.
+Ctrlplane is designed to streamline and automate complex deployment processes
+across diverse infrastructures, helping teams scale their operations efficiently
+and securely.
 
 Here's an overview of Ctrlplane's key capabilities and common use cases.
 
