--- a/self-hosted/config/auth/google.mdx
+++ b/self-hosted/config/auth/google.mdx
@@ -44,3 +44,12 @@ Once configured, users will be able to sign in to your Ctrlplane application
 using their Google accounts. The authentication flow will redirect users to
 Google's login page and then back to your Ctrlplane instance after successful
 authentication.
+
+<RequestExample>
+
+```yaml Docker Compose
+AUTH_GOOGLE_CLIENT_ID: "1234567890"
+AUTH_GOOGLE_CLIENT_SECRET: "1234567890"
+```
+
+</RequestExample>
