--- a/self-hosted/config/integrations/github-bot.mdx
+++ b/self-hosted/config/integrations/github-bot.mdx
@@ -1,5 +1,5 @@
 ---
-title: GitHub Integration
+title: GitHub Bot
 description: |
   Connect your GitHub organization to your workspace to enable powerful features 
   like GitHub Job Agent, Release Scanner, and Deployment Configuration.
