--- a/self-hosted/config/integrations/google.mdx
+++ b/self-hosted/config/integrations/google.mdx
@@ -61,7 +61,7 @@ webservice:
     GOOGLE_APPLICATION_CREDENTIALS: /path/to/service-account.json
 ```
 
-```yaml Docker
+```yaml Docker Compose
 GOOGLE_APPLICATION_CREDENTIALS: /path/to/service-account.json
 ```
 
