power shell scripts

--- a/integrations/miscellaneous/script-executor.mdx
+++ b/integrations/miscellaneous/script-executor.mdx
@@ -6,13 +6,9 @@ description: "Execute custom scripts as part of your deployment process"
 ## Overview
 
 When configuring a deployment that uses the script executor, you will be
-prompted to provide:
+prompted to provide the script content to execute in the web code editor.
 
-1. The script content to execute
-2. Any environment variables needed by the script
-3. The working directory for script execution (optional)
-
-For example, a script that validates database migrations might look like:
+It supports both bash and powershell scripts.
 
 ## Usage
 
