--- a/integrations/saas/tailscale.mdx
+++ b/integrations/saas/tailscale.mdx
@@ -3,7 +3,7 @@ title: Tailscale
 description: "Tailscale integration"
 ---
 
-## CLI Scanner
+## CLI Device Provider
 
 The Tailscale scanner syncs devices from your Tailscale network into Ctrlplane,
 allowing you to deploy, upgrade and manage devices in your Tailscale network.
