--- a/integrations/saas/terraform-cloud.mdx
+++ b/integrations/saas/terraform-cloud.mdx
@@ -3,7 +3,7 @@ title: Terraform Cloud
 description: "Terraform Cloud integration"
 ---
 
-## CLI Scanner
+## CLI Workspace Provider
 
 The Terraform Cloud scanner syncs workspaces from your Terraform Cloud account
 into Ctrlplane, allowing you to deploy, upgrade and manage workspaces.
