--- a/policies/deployment-control.mdx
+++ b/policies/deployment-control.mdx
@@ -19,3 +19,13 @@ Limit concurrent jobs in an environment.
 3. **Performance Optimization**: Gradual deployment avoids resource usage spikes.
 
 Applying this policy across environments ensures total job concurrency stays within limits.
+
+## Deployment Retry
+
+Configure automatic retry attempts for failed deployments.
+
+1. **Resilience**: Automatically retry transient failures without manual
+   intervention
+2. **Configurable Limits**: Set maximum retry attempts before marking as failed
+
+This helps handle temporary infrastructure issues or external service outages.
