fix: Add azure docs

--- a/integrations/cloud-providers/azure.mdx
+++ b/integrations/cloud-providers/azure.mdx
@@ -5,4 +5,15 @@ description: "Azure integration"
 
 ## Resource Provider
 
+The Azure resource provider syncs resources from your Azure subscriptions into Ctrlplane.
+
 ### Managed Provider
+
+With some initial configuration, our managed provider will sync your Azure resources for you.
+
+To sync your Azure resources, you'll need:
+
+1. An Azure subscription ID
+2. The tenant ID of your Azure subscription
+3. Permission to consent to our Azure service principal for that tenant
+
