--- a/getting-started/approvals.mdx
+++ b/getting-started/approvals.mdx
@@ -30,7 +30,8 @@ Manual interventions can be configured through:
 ### Via Dashboard
 
 <Steps>
-  1. Navigate to your deployment pipeline 2. Add a "Manual Intervention" step 3.
-  Configure the approval requirements: - Required approvers - Timeout settings -
+  1. Navigate to your deployment pipeline 
+  2. Add a "Manual Intervention" step 
+  3. Configure the approval requirements: - Required approvers - Timeout settings -
   Notification preferences
 </Steps>
